# mizzle

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
design/: architecture.md  auth-implementation-plan.md  auth.md  concurrency.md  distributed-backends.md  dos-protection.md  kv-backend-plan.md  lfs-backend-plan.md  logging-config.md  performance-testing.md  roadmap.md  sql-backend-plan.md
libmizzle/: Cargo.toml
libmizzle/src/: lib.rs
mizzle/: Cargo.toml
mizzle-proto/: Cargo.toml
mizzle-proto/src/: command.rs  fetch.rs  lfs.rs  lib.rs  limits.rs  ls_refs.rs  pack.rs  receive.rs  types.rs  utils.rs
mizzle/benches/: backends.rs
mizzle/benches/support/: git_runner.rs  mod.rs  repo_builder.rs  span_totals.rs
mizzle/examples/: actix.rs  axum.rs  rocket.rs  server.rs  trillium.rs
mizzle/src/: auth.rs  auth_types.rs  bitmap.rs  command.rs  fetch.rs  inspect.rs  lib.rs  ls_refs.rs  pack.rs  pack_reuse.rs  receive.rs  serve.rs  sigverify.rs  traits.rs  utils.rs
mizzle/src/backend/: fs_git_cli.rs  fs_gitoxide.rs  mod.rs  pack_cache.rs
mizzle/src/backend/kv/: build_pack.rs  graph.rs  keys.rs  mod.rs  objects.rs  refs.rs  txn.rs
mizzle/src/backend/sql/: graph.rs  mod.rs  objects.rs  refs.rs  schema.rs
mizzle/src/lfs/: batch.rs  fs.rs  mod.rs  transfer.rs
mizzle/src/servers/: actix.rs  axum.rs  mod.rs  rocket.rs  ssh.rs  trillium.rs
mizzle/tests/: auth.rs  auth_rules.rs  backend_parity.rs  clone.rs  comparison_regression.rs  dual_backend.rs  fetch.rs  hooks.rs  ls_remote.rs  push.rs  ssh.rs
mizzle/tests/common/: mod.rs
server/: Cargo.toml
server/src/: fetch.rs  ls_refs.rs  main.rs  serve.rs  utils.rs
sniffer/: Cargo.toml
sniffer/src/: main.rs
