[package]
name = "mizzle-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
gix-packetline = { version = "0.21", features = ["async-io"] }
gix-hash = { version = "0.25", features = ["sha1"] }
anyhow = "1.0"
futures-lite = "2.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
