[package]
name = "mizzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trillium = { version = "0.2", optional = true }
trillium-smol = { version = "0.4", optional = true }
log = "0.4"
simple_logger = "5.2"
form_urlencoded = "1.2"
gix = { version = "0.80", features = ["parallel"] }
gix-packetline = { version = "0.21", features = ["async-io"] }
gix-ref = "0.60"
gix-pack = "0.67"
gix-features = { version = "0.46", features = ["parallel"] }
futures-lite = "2.6"
smol = { version = "2.0", optional = true }
piper = "0.2"
anyhow = "1.0"
axum = { version = "0.8.8", features = ["macros"], optional = true  }
actix-web = { version = "4", optional = true }
rocket = { version = "0.5", optional = true }
tokio = { version = "1.49.0", features = ["full", "macros", "rt-multi-thread"], optional = true  }
tokio-util = { version = "0.7.18", features = ["compat", "io"], optional = true  }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
gix-hash = "0.22.1"

[dev-dependencies]
tempfile = "3.25.0"
async-net = "2.0.0"

[features]
default = ["axum", "actix"]
axum = ["dep:axum", "dep:tokio", "dep:tokio-util"]
trillium_smol = ["dep:trillium", "dep:trillium-smol", "dep:smol"]
actix = ["dep:actix-web", "dep:tokio", "dep:tokio-util"]
rocket = ["dep:rocket", "dep:tokio", "dep:tokio-util"]

[[example]]
name = "axum"
required-features = ["axum"]

[[example]]
name = "trillium"
required-features = ["trillium_smol"]

[[example]]
name = "actix"
required-features = ["actix"]

[[example]]
name = "rocket"
required-features = ["rocket"]
