[package]
name = "mizzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mizzle-proto = { path = "../mizzle-proto" }
tracing = "0.1"
form_urlencoded = "1.2"
gix = { version = "0.80", features = ["parallel"] }
gix-packetline = { version = "0.21", features = ["async-io"] }
gix-ref = "0.60"
gix-object = "0.57"
gix-pack = "0.67"
gix-features = { version = "0.46", features = ["parallel"] }
futures-lite = "2.6"
piper = "0.2"
anyhow = "1.0"
tokio = { version = "1.49.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["compat", "io"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
gix-hash = "0.22.1"
axum = { version = "0.8.8", features = ["macros"], optional = true }
russh = { version = "0.58", optional = true }
tempfile = "3.25.0"

[features]
default = ["axum"]
axum = ["dep:axum"]
ssh = ["dep:russh"]

[[example]]
name = "axum"
required-features = ["axum"]

[dev-dependencies]
paste = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["timeout", "limit"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "backends"
harness = false
