[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trillium = "0.2"
trillium-smol = "0.3"
log = "*"
simple_logger = "*"
form_urlencoded = "*"
gix-packetline = {version="*", features=["async-io"]}
futures-lite = "*"
smol = "*"
piper = "*"
